[package]
name = "isahc_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bytes = "1.9.0"
futures = "0.3.31"
isahc = "1.7.2"
lazy_static = "1.5.0"
pin-project = "1.1.8"
tokio = { version = "1.42.0", features = [ "rt-multi-thread", "net" ] }
tokio-util = { version = "0.7.13", features = [ "compat", "io" ] }
